# tpm2-tools

./: .cirrus.yml  .codecov.yml  .gitignore  .lgtm.yml  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.md  Android.mk  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile  Makefile.am  README.md  RELEASE  RELEASE.md  bootstrap  codecov.yml  coding_standard_c.txt  configure.ac  manual  mkdocs.yml
.ci/: 0001-TSS2_Sys_LoadExternal-Fix-marshaling-error.patch  Dockerfile  ci.run  coveralls-upload.sh  coverity.run  docker-prelude.sh  docker.env  docker.run  download-deps.sh  travis-build-and-run-tests.sh  travis-tss-install.sh  travis.run
.ci/resources/: ibmtpm532.tar.xxd
.github/workflows/: ci-freebsd.yaml  codechecker.yml  codeql.yml  cron.yml  main.yml  tss2master.yml
.libs/: libtpm_shell.la  libtpm_shell.so.0
bundle/: .gitignore  bundle  tpm2_bundle.c
doc/: CHANGELOG.md  CODE_OF_CONDUCT.md  INSTALL.md  MAINTAINERS.md  RELEASE.md
docs/: CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  requirements.in  requirements.txt
lib/: .gitignore  base-types.c  context-util.c  context-util.h  conversion.c  conversion.h  default_config.site  efi_event.h  files.c  files.h  libtpm2tools.sym  log.c  log.h  object.c  object.h  options.c  options.h  password_util.c  password_util.h  pcr.c  pcr.h  rc-decode.c  rc-decode.h  string-bytes.c  string-bytes.h  syscontext.c  syscontext.h  tool_rc.c  tool_rc.h  tpm2-header.c  tpm2.c  tpm2.h  tpm2_alg_util.c  tpm2_alg_util.h  tpm2_attr_util.c  tpm2_attr_util.h  tpm2_auth_util.c  tpm2_auth_util.h  tpm2_capability.c  tpm2_capability.h  (+68 more)
lib/tcti/: tpm2_tools_tcti_abrmd.c  tpm2_tools_tcti_abrmd.h  tpm2_tools_tcti_device.c  tpm2_tools_tcti_device.h  tpm2_tools_tcti_socket.c  tpm2_tools_tcti_socket.h
man/: .gitignore  alg-common.troff  alg-notes-common.troff  common-options.troff  hash-alg-common.troff  object-alg-common.troff  password-fmt-common.troff  sign-alg-common.troff  tcti-environment.troff  tcti-options.troff  tpm2.1.md  tpm2_activatecredential.1.md  tpm2_activatecredential.8.in  tpm2_activatecredential.8.md  tpm2_akparse.1.md  tpm2_akparse.8.in  tpm2_akparse.8.md  tpm2_certify.1.md  tpm2_certify.8.in  tpm2_certify.8.md  tpm2_certifyX509certutil.1.md  tpm2_certifycreation.1.md  tpm2_changeauth.1.md  tpm2_changeeps.1.md  tpm2_changepps.1.md  tpm2_checkquote.1.md  tpm2_clear.1.md  tpm2_clearcontrol.1.md  tpm2_clearlock.1.md  tpm2_clockrateadjust.1.md  tpm2_commit.1.md  tpm2_contextload.1.md  tpm2_convert_key.8.in  tpm2_create.1.md  tpm2_create.8.in  tpm2_create.8.md  tpm2_createak.1.md  tpm2_createek.1.md  tpm2_createpolicy.1.md  tpm2_createpolicy.8.in  (+198 more)
man/common/: alg.md  authorizations.md  ctxobj.md  footer.md  hash.md  nv-attrs.md  obj-attrs.md  object-alg.md  options.md  password.md  pcr.md  pcrs_format.md  policy-limitations.md  protection-details.md  pubkey.md  returns.md  (+6 more)
misc/: coding_standard_c.md  coding_standard_c.txt
sapi-tools/: CatSizedByteBuffer.c  CopySizedBuffer.c  DecryptEncrypt.c  Entity.c  LoadExternalHMACKey.c  Makefile.am  SessionHmac.c  StartAuthSession.c  TpmCalcPHash.c  TpmHandleToName.c  TpmHash.c  TpmHmac.c  changeEndian.c  common.c  common.cpp  common.h  debug.c  kdfa.c  platformcommand.c  sample.h  syscontext.c  syscontext.h  tpm2_activatecredential.cpp  tpm2_akparse.cpp  tpm2_certify.cpp  tpm2_create.cpp  tpm2_createprimary.cpp  tpm2_encryptdecrypt.cpp  tpm2_evictcontrol.cpp  tpm2_getmanufec.cpp  tpm2_getpubak.cpp  tpm2_getpubek.cpp  tpm2_getrandom.cpp  tpm2_hash.cpp  tpm2_hmac.cpp  tpm2_listpcrs.cpp  tpm2_load.cpp  tpm2_loadexternal.cpp  tpm2_makecredential.cpp  tpm2_nvdefine.cpp  (+12 more)
src/: DecryptEncrypt.c  Entity.c  LoadExternalHMACKey.c  SessionHmac.c  StartAuthSession.c  TpmCalcPHash.c  TpmHandleToName.c  TpmHash.c  TpmHmac.c  changeEndian.c  common.c  common.h  context-util.c  context-util.h  debug.c  debug.h  files.c  files.h  kdfa.c  log.c  log.h  main.c  options.c  options.h  password_util.c  password_util.h  rc-decode.c  rc-decode.h  sample.h  string-bytes.c  string-bytes.h  syscontext.c  syscontext.h  tpm2-header.c  tpm2-header.h  tpm2_activatecredential.c  tpm2_activatecredential.cpp  tpm2_akparse.c  tpm2_akparse.cpp  tpm2_certify.c  (+70 more)
test/: .gitignore  README.md  test_algs.sh  test_algs_tpm2_encryptdecrypt.sh  test_algs_tpm2_getpubak.sh  test_algs_tpm2_getpubek.sh  test_algs_tpm2_hmac.sh  test_algs_tpm2_quote.sh  test_algs_tpm2_readpublic.sh  test_algs_tpm2_sign.sh  test_algs_tpm2_unseal.sh  test_algs_tpm2_verifysignature.sh  test_all.sh  test_create.sh  test_smoking.sh  test_tpm2_activecredential.sh  test_tpm2_akparse.sh  test_tpm2_certify.sh  test_tpm2_create_all.sh  test_tpm2_createprimary_all.sh  test_tpm2_encryptdecrypt.sh  test_tpm2_evictcontrol.sh  test_tpm2_getpubak.sh  test_tpm2_getpubek.sh  test_tpm2_getpubek_ak_mk.sh  test_tpm2_getrandom.sh  test_tpm2_getrandom_func.sh  test_tpm2_hash.sh  test_tpm2_hash_all.sh  test_tpm2_hmac.sh  test_tpm2_listpcrs.sh  test_tpm2_load.sh  test_tpm2_loadexternal.sh  test_tpm2_makecredential.sh  test_tpm2_nv.sh  test_tpm2_quote.sh  test_tpm2_readpublic.sh  test_tpm2_rsadecrypt.sh  test_tpm2_rsaencrypt.sh  test_tpm2_send_command.sh  (+6 more)
tools/: .gitignore  main.c  main.h  tpm2.c  tpm2.py  tpm2_activatecredential.c  tpm2_akparse.c  tpm2_certify.c  tpm2_certifycreation.c  tpm2_changeauth.c  tpm2_changeeps.c  tpm2_changepps.c  tpm2_checkquote.c  tpm2_clear.c  tpm2_clearcontrol.c  tpm2_clearlock.c  tpm2_clockrateadjust.c  tpm2_commit.c  tpm2_contextload.c  tpm2_convert_key.c  tpm2_create.c  tpm2_createak.c  tpm2_createek.c  tpm2_createpolicy.c  tpm2_createprimary.c  tpm2_decapsulate.c  tpm2_dictionarylockout.c  tpm2_dump_capability.c  tpm2_duplicate.c  tpm2_ecdhkeygen.c  tpm2_ecdhzgen.c  tpm2_ecephemeral.c  tpm2_ecephermal.c  tpm2_encapsulate.c  tpm2_encryptdecrypt.c  tpm2_evictcontrol.c  tpm2_flushcontext.c  tpm2_getcap.c  tpm2_getcommandauditdigest.c  tpm2_geteccparameters.c  (+89 more)
tpm_shell/: README  test.lua  tpm_shell.c
utils/: tcgRSApub2PemDer.sh
(+382 files in other folders)
